<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageButton
        android:id="@+id/currentRoutineImageButton"
        android:layout_width="301dp"
        android:layout_height="224dp"
        android:layout_marginTop="16dp"
        android:scaleType="centerInside"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/backgrounds/scenic[1]" />

    <Button
        android:id="@+id/plusButton"
        android:layout_width="88dp"
        android:layout_height="66dp"
        android:text="@string/plus_button_text"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="@+id/currentRoutineImageButton"
        app:layout_constraintEnd_toEndOf="@+id/currentRoutineImageButton" />

    <Button
        android:id="@+id/contactUsButton"
        android:layout_width="304dp"
        android:layout_height="61dp"
        android:layout_marginBottom="20dp"
        android:text="@string/contact_info_button_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/mapImageButton"
        android:layout_width="301dp"
        android:layout_height="114dp"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/currentRoutineImageButton"
        android:contentDescription="TODO" />

    <TextView
        android:id="@+id/mapTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="4dp"
        android:text="@string/map_button_text"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/mapImageButton"
        app:layout_constraintTop_toTopOf="@+id/mapImageButton" />
</androidx.constraintlayout.widget.ConstraintLayout>